--- a/index.html
+++ b/index.html
@@ -112,11 +112,6 @@
 
 						</nav><!-- #primary-menu end -->
 
-						<form class="top-search-form" action="search.html" method="get">
-							<input type="text" name="q" class="form-control" value=""
-								placeholder="Type &amp; Hit Enter.." autocomplete="off">
-						</form>
-
 					</div>
 				</div>
 			</div>
@@ -407,7 +402,8 @@
 							<div class="price-price color">100zł</div>
 						</div>
 						<p class="price-desc">Wszystkie nasze transfery wykonujemy samochodami klasy
-							<strong>premium</strong>.</p>
+							<strong>premium</strong>.
+						</p>
 					</div>
 
 					<div class="col-lg-6 price-wrap">
@@ -654,11 +650,18 @@
 												placeholder="Podaj swój nr telefonu" required>
 											<div class="input-group-append">
 												<!-- <button class="btn btn-success" type="submit">Wyślij</button> -->
-												<button class="btn btn-success g-recaptcha" data-sitekey="6LdX6KUaAAAAAKiy-0ChqvrtrDFWI8wkKFKB0EYC"
+												<button class="btn btn-success g-recaptcha"
+													data-sitekey="6LdX6KUaAAAAAKiy-0ChqvrtrDFWI8wkKFKB0EYC"
 													data-callback='onSubmit' data-action='submit'>Wyślij</button>
 											</div>
 										</div>
 									</form>
+									<div class="text-smaller">
+										<small>This site is protected by reCAPTCHA and the Google
+											<a href="https://policies.google.com/privacy">Privacy Policy</a> and
+											<a href="https://policies.google.com/terms">Terms of Service</a> apply.
+										</small>
+									</div>
 									<IFRAME style="display:none" name="hidden-form"></IFRAME>
 
 								</div>
