--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<link rel="stylesheet" href="css/swiper.css" type="text/css" />
 	<link rel="stylesheet" href="css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
-	<link rel="stylesheet" href="css/animate.css" type="text/css" />
-	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
+	<link rel="stylesheet" href="css/animate.css" type="text/css" /> 
+
 	<link rel="stylesheet" href="css/colors.css" type="text/css" />
 
 	<link rel="stylesheet" href="css/custom.css" type="text/css" />
@@ -648,7 +648,7 @@
 											</div>
 											<input type="tel" id="widget-subscribe-form-phone"
 												name="widget-subscribe-form-phone" class="form-control"
-												placeholder="Podaj swój nr telefonu (xxx-xxx-xxx)" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}">
+												placeholder="xxx-xxx-xxx" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}">
 											<div class="input-group-append">
 												<button class="btn btn-success g-recaptcha"
 													data-sitekey="6LdX6KUaAAAAAKiy-0ChqvrtrDFWI8wkKFKB0EYC"
