--- a/index.html
+++ b/index.html
@@ -650,10 +650,9 @@
 												name="widget-subscribe-form-phone" class="form-control"
 												placeholder="xxx-xxx-xxx">
 											<div class="input-group-append">
-												<!-- <button class="btn btn-success g-recaptcha"
+												<button class="btn btn-success g-recaptcha"
 													data-sitekey="6LdX6KUaAAAAAKiy-0ChqvrtrDFWI8wkKFKB0EYC"
-													data-callback='onSubmit' data-action='submit'>Wyślij</button> -->
-												<button class="btn btn-success">Wyślij</button>
+													data-callback='onSubmit' data-action='submit'>Wyślij</button>
 											</div>
 										</div>
 									</form>
