--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 										alternatywa na krakowskim rynku przewozu osób oraz ich samochodów.</p>
 								</div>
 							</div>
-							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/x6.jpg');">
+							<div class="swiper-slide-bg" style="background-image: url('images/slider/swiper/swiper1.jpg');">
 							</div>
 						</div>
 						<div class="swiper-slide dark">
@@ -162,7 +162,7 @@
 								</div>
 							</div>
 							<div class="swiper-slide-bg"
-								style="background-image: url('images/slider/swiper/x8.jpg'); background-position: center top;">
+								style="background-image: url('images/slider/swiper/swiper2.jpg'); background-position: center top;">
 							</div>
 						</div>
 					</div>
@@ -300,7 +300,7 @@
 			</div>
 			<div class="clear"></div>
 			<div id="price" class="section page-section parallax pb-0 mb-0 white"
-				style="background-image: url('images/slider/swiper/x2.jpg'); background-size: cover; height: 600px"
+				style="background-image: url('images/slider/price.jpg'); background-size: cover; height: 600px"
 				data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
 			</div>
 
