--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Header - Transparent | Canvas</title>
+	<title>Car Party</title>
 
 </head>
 
@@ -51,7 +51,7 @@
 						<div id="logo">
 							<a href="index.html" class="standard-logo">
 								<img src="images/logo-car.svg" alt="Car" width="100px" style="margin-right: 10px;"></a>
-							<img src="images/logo-name.svg" alt="Logo" width="150px"></a>
+							<img src="images/logo-name.svg" alt="Car party" width="150px"></a>
 							<a href="#header">
 							</a>
 						</div><!-- #logo end -->
@@ -127,7 +127,7 @@
 						<div class="swiper-slide dark">
 							<div class="container">
 								<div class="slider-caption slider-caption-center">
-									<h2 data-animate="fadeInUp">CAR PARTY</h2>
+									<h1 data-animate="fadeInUp">CAR PARTY</h1>
 									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Nowa
 										alternatywa na krakowskim rynku przewozu osób oraz ich samochodów.</p>
 								</div>
@@ -146,7 +146,7 @@
 							</div>
 							<div class="video-wrap no-placeholder">
 								<video preload="auto" loop autoplay muted playsinline
-										poster="images/videos/poster.jpg">
+										poster="https://carparty.pl/images/videos/poster.jpg">
 									<source src='images/videos/video.mp4' type='video/mp4' />
 								</video>
 								<div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
@@ -185,11 +185,10 @@
 			<!-- About Section
 				============================================= -->
 			<div class="m-0 bg-transparent page-section" style="padding-top: 150px">
-				<a class="anchor" id="about"></a>
 				<div class="container clearfix">
-					<div class="row clearfix">
+					<div  id="about" class="row clearfix">
 						<div class="col-md-3 col-6 d-none d-md-block">
-							<img src="images/about1.jpg" alt="Image">
+							<img src="images/about1.jpg" alt="Kraków">
 						</div>
 						<div class="col-md-6 col-12 center" style="padding: 0 50px;">
 							<div class="heading-block bottommargin-sm">
@@ -202,11 +201,11 @@
 								odwiezieniu Twojego auta bezpiecznie pod wskazany adres. W naszej ofercie posiadamy
 								wyłącznie samochody klasy <strong>premium</strong> takich jak: Porsche, Mercedes, Audi,
 								Jaguar.</p>
-							<img src="images/logo-full.svg" alt="Image" width="350">
+							<img src="images/logo-full.svg" alt="Car Party logo" width="350">
 
 						</div>
 						<div class="col-md-3 col-6 d-none d-md-block">
-							<img src="images/about2.jpg" alt="Image">
+							<img src="images/about2.jpg" alt="Kierowca samochodowy">
 						</div>
 					</div>
 				</div>
@@ -214,8 +213,7 @@
 
 			<div class="line"></div>
 
-			<div class="container clearfix bottommargin">
-				<a class='anchor' id="oferta"></a>
+			<div id="oferta" class="container clearfix bottommargin">
 				<div class="row col-mb-50">
 
 					<div class="col-sm-6 col-lg-4">
@@ -300,15 +298,14 @@
 			</div>
 			<div class="clear"></div>
 			<div id="price" class="section page-section parallax pb-0 mb-0 white"
-				style="background-image: url('images/slider/price.jpg'); background-size: cover; height: 600px"
+				style="background-image: url('images/price.jpg'); background-size: cover; height: 600px"
 				data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
 			</div>
 
-			<div class="container bottommargin dark clearfix" style="margin-top: -500px">
-				<a class='anchor' id="cennik"></a>
+			<div  id="cennik" class="container bottommargin dark clearfix" style="margin-top: -500px">
 				<div class=" heading-block bottommargin-lg center clearfix"
 					style="text-shadow: 1px 1px 1px rgba(0,0,0,0.2);">
-					<img src="images/wallet.svg" alt="Image" height="40" style="margin-bottom: 20px">
+					<img src="images/wallet.svg" alt="portfel" height="40" style="margin-bottom: 20px">
 					<h2 class="text-shadow">Cennik</h2>
 					<h5 class="text-shadow">(płatność gotówką)</h5>
 				</div>
@@ -319,7 +316,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a>Pierwsze 3km</a>
+								<span>Pierwsze 3km</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -332,7 +329,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a>Każdy kolejny km</a>
+								<span>Każdy kolejny km</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -347,7 +344,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a>Wyjazd poza Kraków</a>
+								<span>Wyjazd poza Kraków</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -363,7 +360,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a>Każde 10 minut oczekiwania</a>
+								<span>Każde 10 minut oczekiwania</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -378,7 +375,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a>Dowóz alkoholu na terenie Krakowa</a>
+								<span>Dowóz alkoholu na terenie Krakowa</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -396,7 +393,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a><span class="d-none d-md-inline">Transfer </span>Kraków -> Balice</a>
+								<span></s<span class="d-none d-md-inline">Transfer </span>Kraków -> Balice</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -411,7 +408,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a><span class="d-none d-md-inline">Transfer </span>Kraków -> Pyrzowice</a>
+								<span></s<span class="d-none d-md-inline">Transfer </span>Kraków -> Pyrzowice</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -423,7 +420,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a><span class="d-none d-md-inline">Transfer </span>Kraków -> Warszawa</a>
+								<span></s<span class="d-none d-md-inline">Transfer </span>Kraków -> Warszawa</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -435,7 +432,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a><span class="d-none d-md-inline">Transfer </span>Kraków -> Wrocław</a>
+								<span></s<span class="d-none d-md-inline">Transfer </span>Kraków -> Wrocław</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -447,7 +444,7 @@
 					<div class="col-lg-6 price-wrap">
 						<div class="price-header">
 							<div class="price-name">
-								<a><span class="d-none d-md-inline">Transfer </span>Kraków -> Gdańsk</a>
+								<span></s<span class="d-none d-md-inline">Transfer </span>Kraków -> Gdańsk</span>
 							</div>
 							<div class="price-dots">
 								<span class="separator-dots"></span>
@@ -467,9 +464,7 @@
 
 
 			</div>
-			<div class="container">
-				<a class='anchor' id="regulamin"></a>
-
+			<div id="regulamin" class="container">
 				<div class="col-md-12">
 
 					<div class="widget clearfix">
@@ -545,14 +540,14 @@
 				data-nav="false" data-loop="true" data-autoplay="5000" data-pagi="false" data-items-xs="1"
 				data-items-sm="1" data-items-md="2" data-items-lg="3" data-items-xl="3" data-stage-padding="50">
 
-				<img src="images/cars/1.jpg">
-				<img src="images/cars/2.jpg">
-				<img src="images/cars/3.jpg">
-				<img src="images/cars/4.jpg">
-				<img src="images/cars/5.jpg">
-				<img src="images/cars/6.jpg">
-				<img src="images/cars/7.jpg">
-				<img src="images/cars/8.jpg">
+				<img src="images/cars/1.jpg" alt="samochód bmw">
+				<img src="images/cars/2.jpg" alt="samochód mercedes">
+				<img src="images/cars/3.jpg" alt="audi r8">
+				<img src="images/cars/4.jpg" alt="mercedes biały"> 
+				<img src="images/cars/5.jpg" alt="g wagon">
+				<img src="images/cars/6.jpg" alt="ferrari">
+				<img src="images/cars/7.jpg" alt="bmw">
+				<img src="images/cars/8.jpg" alt="lamborghini">
 			</div>
 
 
@@ -579,7 +574,7 @@
 
 								<div class="widget clearfix">
 
-									<img src="images/logo-name.svg" alt="Logo" width="150px"></a>
+									<img src="images/logo-name.svg" alt="logo car party" width="150px"></a>
 
 									<p>Twoje <strong>bezpieczeństwo</strong>, jest dla nas
 										<strong>najważniejsze.</strong>
@@ -603,7 +598,7 @@
 
 							</div>
 
-							<img class="second-logo" src="images/logo.png" alt="Image">
+							<img class="second-logo" src="images/logo.png" alt="logo car party">
 						</div>
 
 					</div>
@@ -618,14 +613,14 @@
 
 									<div class="row">
 										<div class="col-lg-6 bottommargin-sm">
-											<div class="counter counter-small"><span data-from="50" data-to="15065421"
+											<div class="counter counter-small"><span data-from="50" data-to="7421"
 													data-refresh-interval="80" data-speed="3000"
 													data-comma="true"></span></div>
 											<h5 class="mb-0">Przejechanych km</h5>
 										</div>
 
 										<div class="col-lg-6 bottommargin-sm">
-											<div class="counter counter-small"><span data-from="100" data-to="18465"
+											<div class="counter counter-small"><span data-from="0" data-to="141"
 													data-refresh-interval="50" data-speed="2000"
 													data-comma="true"></span></div>
 											<h5 class="mb-0">Klientów</h5>
@@ -649,7 +644,7 @@
 											</div>
 											<input type="tel" id="widget-subscribe-form-phone"
 												name="widget-subscribe-form-phone" class="form-control"
-												placeholder="xxx-xxx-xxx">
+												placeholder="567123890">
 											<div class="input-group-append">
 												<button class="btn btn-success g-recaptcha"
 													data-sitekey="6LdX6KUaAAAAAKiy-0ChqvrtrDFWI8wkKFKB0EYC"
@@ -673,14 +668,14 @@
 
 									<div class="row">
 										<div class="col-6 col-md-12 col-lg-6 clearfix">
-											<a href="https://www.instagram.com/carparty_official" target="_blank"
+											<a href="https://www.instagram.com/carparty_official" target="_blank" rel="noopener"
 												class="social-icon si-dark si-colored si-instagram mb-0"
 												style="margin-right: 10px;">
 												<i class="icon-instagram"></i>
 												<i class="icon-instagram"></i>
 											</a>
-											<a href="#"><small style="display: block; margin-top: 3px;"><strong>Odwiedź
-														nasz</strong><br>Instagram</small></a>
+											<small style="display: block; margin-top: 3px;"><strong>Odwiedź
+														nasz</strong><br>Instagram</small>
 										</div>
 									</div>
 
